Исправлены названия переменных для корректной работы с базой данных

--- a/OxygenConverterWebApp/Views/Home/Demo.cshtml
+++ b/OxygenConverterWebApp/Views/Home/Demo.cshtml
@@ -45,7 +45,7 @@
                         </tr>
                         <tr>
                             <td>Удельная интенсивность продувки</td>
-                            <td>@Html.TextBox("InputData.q", (double)(ViewBag.InputData.q), htmlAttributes: new { type = "text", style = " width:100px; " })</td>
+                            <td>@Html.TextBox("InputData.q", (double)(ViewBag.InputData.C), htmlAttributes: new { type = "text", style = " width:100px; " })</td>
                         </tr>
                         <tr>
                             <td>Температура кислорода перед соплами кислородной фурмы</td>
