--- a/OxygenConverterWebApp/Views/InputDataVariants/Index.cshtml
+++ b/OxygenConverterWebApp/Views/InputDataVariants/Index.cshtml
@@ -41,7 +41,7 @@
             @Html.DisplayNameFor(model => model.Q)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.q)
+            @Html.DisplayNameFor(model => model.C)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.T)
@@ -62,7 +62,7 @@
         @Html.DisplayFor(modelItem => item.Q)
     </td>
     <td>
-        @Html.DisplayFor(modelItem => item.q)
+        @Html.DisplayFor(modelItem => item.C)
     </td>
     <td>
         @Html.DisplayFor(modelItem => item.T)
