--- a/OxygenConverterWebApp/Views/InputDataVariants/Delete.cshtml
+++ b/OxygenConverterWebApp/Views/InputDataVariants/Delete.cshtml
@@ -27,10 +27,10 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.q)
+            @Html.DisplayNameFor(model => model.C)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.q)
+            @Html.DisplayFor(model => model.C)
         </dd>
 
         <dt>
