--- a/OxygenConverterWebApp/Views/InputDataVariants/Details.cshtml
+++ b/OxygenConverterWebApp/Views/InputDataVariants/Details.cshtml
@@ -25,10 +25,10 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.q)
+            @Html.DisplayNameFor(model => model.C)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.q)
+            @Html.DisplayFor(model => model.C)
         </dd>
 
         <dt>
