--- a/OxygenConverterWebApp/Views/InputDataVariants/Edit.cshtml
+++ b/OxygenConverterWebApp/Views/InputDataVariants/Edit.cshtml
@@ -33,10 +33,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.q, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.C, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.q, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.q, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.C, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.C, "", new { @class = "text-danger" })
             </div>
         </div>
 
