--- a/OxygenConverterWebApp/Views/Account/Login.cshtml
+++ b/OxygenConverterWebApp/Views/Account/Login.cshtml
@@ -8,7 +8,7 @@
 
 <section id="loginForm">
     <h2>ИИспользуйте свои данные для входа</h2>
-    @using (Html.BeginForm(new { ReturnURl = ViewBag.ReturnUrl}))
+    @using (Html.BeginForm(new { ReturnURl = ViewBag.ReturnUrl }))
     {
         @Html.AntiForgeryToken();
         @Html.ValidationSummary();
@@ -28,15 +28,19 @@
                 </li>
                 <li>
                     @Html.CheckBoxFor(l => l.RememberMe)
-                    @Html.LabelFor(l => l.RememberMe, new {@class = "checkbox" })
+                    @Html.LabelFor(l => l.RememberMe, new { @class = "checkbox" })
                 </li>
             </ol>
-            <input type="submit" value="Вход"/>
+            <input type="submit" value="Вход" />
         </fieldset>
         <p>
             @Html.ActionLink("Зарегистрируйтесь", "Register") если вы не имеете учётной записи
         </p>
     }
 </section>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
 
 
