--- a/OxygenConverterWebApp/Views/Home/Demo.cshtml
+++ b/OxygenConverterWebApp/Views/Home/Demo.cshtml
@@ -9,22 +9,19 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-    @using (Html.BeginForm())
+    @using (Html.BeginForm("Demo", "Home", FormMethod.Post))
     {
         <div class="form-group">
-            @Html.LabelFor(model => model.ID_Variant, "Выберите вариант исходных данных", htmlAttributes: new {@class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ID_Variant, "Выберите вариант исходных данных", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-2">
-                @Html.DropDownList("ID_Variant", null, htmlAttributes: new {@class = "form-control" })
-                @Html.ValidationMessageFor(model => model.ID_Variant, "", new {@class = "text-danger" })
+                @Html.DropDownList("ID_Variant", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.ID_Variant, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group" style="margin-left: auto; margin-top: 20px">
             <button type="submit" style="font-size: 16px" class="btn btn-primary">Применить</button>
         </div>
-    }
 
-    @using (Html.BeginForm("RezultDemo", "Home", FormMethod.Post))
-    {
         <p>
 
         </p>
@@ -61,7 +58,14 @@
         </div>
 
         <div class="form-group" style="margin-left: auto; margin-top: 20px">
-            <button type="submit" style="font-size: 16px" class="btn btn-primary">Расчет</button>
+            @Html.TextBox("NameNewVariant", (string)(ViewBag.NameNewVariant))
+            <button type="submit" name="action" value="toSaveAs" style="font-size: 16px" class="btn btn-primary">Сохранить новый вариант</button>
+        </div>
+
+        <p>
+        </p>
+        <div class="form-group" style="margin-left: auto; margin-top: 20px">
+            <button type="submit" name="action" value="toSolver" style="font-size: 16px" class="btn btn-primary">Расчёт</button>
         </div>
     }
 </body>
