--- a/OxygenConverterWebApp/Views/Shared/_Layout.cshtml
+++ b/OxygenConverterWebApp/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
                 <nav>
                     <ul id="menu">
                         <li>@Html.ActionLink("Главная", "Index", "Home")</li>
+                        <li>@Html.ActionLink("Контакты", "Contact", "Home")</li>
                         <li>@Html.ActionLink("Личный кабинет", "Cabinet", "Home")</li>
                         <li>@Html.ActionLink("О программе", "About", "Home")</li>
                     </ul>
